[package]
name = "fast-filter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
arc-swap = "1.7.1"
chrono = "0.4.38"
croaring = "2.0.2"
futures-util = "0.3.30"
lazy_static = "1.4.0"
mysql_async = { version = "0.34", default-features = false, features = ["default-rustls"] }
prost = "0.12"
redis = { version = "= 0.25.4", default-features = false, features = ["tokio-comp", "json", "cluster"] }
serde = { version = "= 1.0", features = ["derive", "rc"] }
serde_json = "1.0"
tonic = "0.11"
tonic-reflection = "0.11"
tokio = { version = "1.38", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "= 0.3.*", features = ["json", "env-filter"] }

[build-dependencies]
tonic-build = "0.11"
